<resources>
    <string name="app_name">My Application</string>
    <string name="JobForU">Job For U</string>
    <string name="spassword">"ABCDEFG"</string>
    <string name="sEmail">Email</string>
    <string name="sPassword">Password</string>
    <string name="slogin">Login</string>
    <string name="signup">Sign Up</string>
    <string name="ssignup">Sign Up</string>
    <string name="sconfirmPassword">Confirm Password</string>
    <string name="sphone">Phone</string>
    <string name="sEmailExample">user@gmail.com</string>
    <string name="sbarrabusqueda">Que necesitas hoy?</string>
    <string name="sLatestRatings">Ultimas Reseñas</string>
    <string name="sOficio">Oficio</string>
    <string name="snombre">Nombre</string>
    <string name="sDireccion">Direccion</string>
    <string name="sApellido">Apellido</string>
    <string name="sUbicacion">Ubicacion</string>
    <string name="sDescripcion">Descripcion</string>
    <string name="sImagen">Imagen</string>
    <string name="sTelefono">Telefono</string>
    <string name="sCall">Contactame</string>
    <string name="sChat">Chat</string>
    <string name="sSend">Enviar</string>
    <string name="sActualizar">Actualizar</string>
    <string name="sSubir">Subir</string>
    <string name="StipoCuenta">Tipo de cuenta</string>
    <string name="sNormal">Normal</string>
    <string name="sProfesional">Profesional</string>
    <string name="sForgot">Forgot Password</string>
    <string name="sResetp">Reset Password</string>
    <string name="sRes">Reset</string>
    <string name="sOpcionesRapidas">Opciones Rapidas</string>
    <string name="sFontanero">Fontanero</string>
    <string name="sJardinero">Jardinero</string>
    <string name="sCarpintero">Carpintero</string>
    <string name="sAlbañil">Albañil</string>
    <string name="sPintor">Pintor</string>
    <string name="sPlomero">Plomero</string>
    <string name="sejemplos">Ejemplos de oficios</string>
</resources>